[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
env_logger = "0.11.11"
log = "0.4.33"
proto = { path = "../proto" }
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3.3.0", features = ["json"] }
